--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-  text-align: right;
+  text-align: center;
 }
 
 h1 {
   font-size: 50px;
   margin-bottom: 10px;
+  color: blue;
 }
 
 h2 {
